<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_gradient"
    tools:context=".view.login.LoginActivity"
    >

  <android.support.constraint.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent=".15"
      />

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="0dp"
      android:layout_height="50dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:navigationIcon="@drawable/ic_close"
      >
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="@dimen/material_content_edge_margin_horizontal"
        android:fontFamily="@font/lato_bold"
        android:text="@string/label_login"
        android:textColor="@color/material_color_white"
        />

  </android.support.v7.widget.Toolbar>

  <android.support.v7.widget.AppCompatImageView
      android:id="@+id/appCompatImageView2"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/guideline2"
      app:srcCompat="@drawable/ic_smiley"
      />


  <android.support.v7.widget.AppCompatTextView
      android:id="@+id/appCompatTextView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:fontFamily="@font/lato_regular"
      android:text="@string/label_welcome"
      android:textColor="@color/material_color_white"
      android:textSize="@dimen/material_typography_dense_display_1_text_size"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
      />

  <android.support.v7.widget.AppCompatTextView
      android:id="@+id/createAccountTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="64dp"
      android:background="@drawable/shape_button"
      android:fontFamily="@font/lato_bold"
      android:gravity="center"
      android:text="@string/label_create_account"
      android:textColor="#FF5F6D"
      android:textSize="@dimen/material_typography_regular_button_text_size"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
      />

  <android.support.v7.widget.AppCompatTextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="24dp"
      android:layout_marginStart="24dp"
      android:text="This is simple demo app that illustrates basic login flow. The design is heavily influcenced by AirBnb."
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/createAccountTextView"
      />

</android.support.constraint.ConstraintLayout>